added test, readme and more logs
