# src/main/java/com/parking/controller/BillController.java
@@ -1,14 +1,16 @@
 package com.parking.controller;
 
 import com.parking.api.BillApi;
-import com.parking.dto.GenerateBillRequestDTO;
+import com.parking.dto.BillRequestDTO;
 import com.parking.dto.BillResponseDTO;
 import com.parking.service.BillService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+@Slf4j
 @RestController
 @RequiredArgsConstructor
 public class BillController implements BillApi {
@@ -16,8 +18,11 @@ public class BillController implements BillApi {
     private final BillService billService;
 
     @Override
-    public ResponseEntity<BillResponseDTO> generateBill(@Valid GenerateBillRequestDTO generateBillRequest) {
-        return ResponseEntity.ok(billService.generateBill(generateBillRequest));
+    public ResponseEntity<BillResponseDTO> generateBill(@Valid BillRequestDTO billRequestDTO) {
+        BillResponseDTO bill = billService.generateBill(billRequestDTO);
+        log.info("Generated bill for vehicle with registration number: {}, total charge: {}", 
+                bill.getVehicleReg(), bill.getVehicleCharge());
+        return ResponseEntity.ok(bill);
     }
 }
 
