# src/main/resources/api/openapi.yaml
@@ -56,7 +56,7 @@ paths:
         content:
           application/json:
               schema:
-                $ref: '#/components/schemas/GenerateBillRequestDTO'
+                $ref: '#/components/schemas/BillRequestDTO'
       responses:
         '200':
           description: Bill generated successfully
@@ -108,7 +108,7 @@ components:
         - spaceNumber
         - timeIn
 
-    GenerateBillRequestDTO:
+    BillRequestDTO:
       type: object
       properties:
         vehicleReg:
